--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirments-dev.txt
+        pip install -r requirements.txt
         
     - name: Validate Django setup
       run: python manage.py check
@@ -57,7 +57,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        pip install -r requirments-dev.txt
+        pip install -r requirements.txt
         
     - name: Generate temporary SECRET_KEY
       run: echo "SECRET_KEY=$(python -c 'import secrets; print(secrets.token_urlsafe(50))')" >> $GITHUB_ENV
@@ -99,7 +99,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        pip install -r requirments-dev.txt
+        pip install -r requirements.txt
         
     - name: Install Playwright
       run: |
