--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,51 @@
 asgiref==3.8.1
 certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.2.0
+colorama==0.4.6
+contourpy==1.3.2
+cryptography==44.0.3
+cycler==0.12.1
 Django==5.2
-gunicorn==23.0.0
+django-debug-toolbar==5.1.0
+exceptiongroup==1.2.2
+fonttools==4.58.0
+greenlet==3.1.1
+idna==3.10
+iniconfig==2.1.0
+joblib==1.5.0
+kiwisolver==1.4.8
+matplotlib==3.10.3
+mysql-connector-python==9.3.0
+nltk==3.9.1
+numpy==2.2.5
+packaging==24.2
+pdfminer.six==20250327
+pdfplumber==0.11.6
+pillow==11.2.1
+playwright==1.51.0
+pluggy==1.5.0
+pycparser==2.22
+pyee==12.1.1
+pyparsing==3.2.3
+pypdfium2==4.30.1
+pytest==8.3.5
+pytest-base-url==2.1.0
+pytest-django==4.11.1
+pytest-playwright==0.7.0
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+regex==2024.11.6
+requests==2.32.3
+ruff==0.11.5
+six==1.17.0
 sqlparse==0.5.3
-python-dotenv
+text-unidecode==1.3
+tomli==2.2.1
+tqdm==4.67.1
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+whitenoise==6.9.0
+wordcloud==1.9.4
